--- a/client/src/components/pages/success/succes.css
+++ b/client/src/components/pages/success/succes.css
@@ -34,3 +34,10 @@
           background-color: #200688;
           color: white;
 }
+.loading{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 20vh;
+            font-size: 30px;
+}
