--- a/client/src/components/pages/modDoc/mod.css
+++ b/client/src/components/pages/modDoc/mod.css
@@ -5,7 +5,7 @@
        margin: 0;
        padding-bottom: 25px;   
 } */
-.patlist{
+.patient-list{
           position: absolute;
           top: 45px;
           left: 125px;
