--- a/client/src/components/pages/delPat/del.css
+++ b/client/src/components/pages/delPat/del.css
@@ -1,13 +1,18 @@
 .del {
-          -webkit-border-radius: 28;
-          -moz-border-radius: 28;
-          border-radius: 14px;
-          font-family: Arial;
-          color: #ff0000;
-          font-size: 20px;
-          background: #0f2cbd;
-          padding: 10px 5px 5px 10px;
-          text-decoration: none;
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Georgia;
+  color: #912391;
+  font-size: 25px;
+  padding: 10px 5px 10px 5px;
+  text-decoration: none;
         }
         
         .del:hover {
