--- a/client/src/components/pages/success/succes.css
+++ b/client/src/components/pages/success/succes.css
@@ -41,3 +41,15 @@
             height: 20vh;
             font-size: 30px;
 }
+.profile-div{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            top: 50px;
+}
+.rounded{
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            margin: 0 10px 0 0;
+}
